--- a/index.html
+++ b/index.html
@@ -1,11 +1,170 @@
 <html>
   <head>
-  <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="router.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="Chart.js"></script>
   </head>
   <body>
-    <div id="borisovka"></div>
-    <div id="ubileynaya"></div>
-    <div id="perlovka"></div>
+    <div>
+      <canvas id="myChart" height="400px"></canvas>
+    </div>
+    <div>
+      <canvas id="myChartHome" height="400px"></canvas>
+    </div>
+
+    <script>
+    var ctx = document.getElementById("myChart");
+    var ctx_home = document.getElementById("myChartHome");
+
+    $.getJSON('/api/', function (dataset) {
+      console.log(dataset)    
+     
+      var labels = dataset.work.labels
+      var bor = dataset.work.bor
+      var you = dataset.work.you
+      var per = dataset.work.per
+      var labels_home = dataset.home.labels
+      var vol = dataset.home.vol
+      console.log(labels_home, vol)
+
+      var data_home = {
+          labels: labels_home,
+          datasets: [
+              {
+                  label: "vol",
+                  fill: false,
+                  lineTension: 0.1,
+                  backgroundColor: "rgba(75,192,192,0.4)",
+                  borderColor: "rgba(75,192,192,1)",
+                  borderCapStyle: 'butt',
+                  borderDash: [],
+                  borderDashOffset: 0.0,
+                  borderJoinStyle: 'miter',
+                  pointBorderColor: "rgba(75,192,192,1)",
+                  pointBackgroundColor: "#fff",
+                  pointBorderWidth: 1,
+                  pointHoverRadius: 5,
+                  pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                  pointHoverBorderColor: "rgba(220,220,220,1)",
+                  pointHoverBorderWidth: 2,
+                  pointRadius: 1,
+                  pointHitRadius: 10,
+                  data: vol,
+              },
+          ]
+      };
+
+
+
+      var data = {
+          labels: labels,
+          datasets: [
+              {
+                  label: "bor",
+                  fill: false,
+                  lineTension: 0.1,
+                  backgroundColor: "rgba(75,192,192,0.4)",
+                  borderColor: "rgba(75,192,192,1)",
+                  borderCapStyle: 'butt',
+                  borderDash: [],
+                  borderDashOffset: 0.0,
+                  borderJoinStyle: 'miter',
+                  pointBorderColor: "rgba(75,192,192,1)",
+                  pointBackgroundColor: "#fff",
+                  pointBorderWidth: 1,
+                  pointHoverRadius: 5,
+                  pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                  pointHoverBorderColor: "rgba(220,220,220,1)",
+                  pointHoverBorderWidth: 2,
+                  pointRadius: 1,
+                  pointHitRadius: 10,
+                  data: bor,
+              },
+              {
+                  label: "you",
+                  fill: false,
+                  lineTension: 0.1,
+                  backgroundColor: "rgba(178,18,36,0.4)",
+                  borderColor: "rgba(178,18,36,1)",
+                  borderCapStyle: 'butt',
+                  borderDash: [],
+                  borderDashOffset: 0.0,
+                  borderJoinStyle: 'miter',
+                  pointBorderColor: "rgba(75,192,192,1)",
+                  pointBackgroundColor: "#fff",
+                  pointBorderWidth: 1,
+                  pointHoverRadius: 5,
+                  pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                  pointHoverBorderColor: "rgba(220,220,220,1)",
+                  pointHoverBorderWidth: 2,
+                  pointRadius: 1,
+                  pointHitRadius: 10,
+                  data: you,
+              },
+              {
+                  label: "per",
+                  fill: false,
+                  lineTension: 0.1,
+                  backgroundColor: "rgba(255,218,25,0.4)",
+                  borderColor: "rgba(255,218,25,1)",
+                  borderCapStyle: 'butt',
+                  borderDash: [],
+                  borderDashOffset: 0.0,
+                  borderJoinStyle: 'miter',
+                  pointBorderColor: "rgba(75,192,192,1)",
+                  pointBackgroundColor: "#fff",
+                  pointBorderWidth: 1,
+                  pointHoverRadius: 5,
+                  pointHoverBackgroundColor: "rgba(75,192,192,1)",
+                  pointHoverBorderColor: "rgba(220,220,220,1)",
+                  pointHoverBorderWidth: 2,
+                  pointRadius: 1,
+                  pointHitRadius: 10,
+                  data: per,
+              }
+          ]
+      };
+
+
+      var myChartHome = new Chart(ctx_home, {
+        type: 'line',
+        data: data_home,
+        options: {
+
+            maintainAspectRatio: false,
+            responsive: true,
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero:true
+                    }
+                }]
+            }
+        }
+      });
+
+      var myChart = new Chart(ctx, {
+        type: 'line',
+        data: data,
+        options: {
+            showXLabels: 3,
+            maintainAspectRatio: false,
+            responsive: true,
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero:true,
+                    }
+                }],
+                xAxes: [{
+                    ticks: {
+                        autoSkip:true,
+                    }
+                }]
+
+            }
+        }
+      });
+    });
+    </script>
   </body>
 </html>
