--- a/index_parser.html
+++ b/index_parser.html
@@ -4,10 +4,6 @@
   <script src="router.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="map" style="width: 600px; height: 400px"></div>
-    <div id="borisovka"></div>
-    <div id="ubileynaya"></div>
-    <div id="perlovka"></div>
-    <div id="volkovskoe"></div>
+    <div id="map" style="display: none; width: 600px; height: 400px"></div>
   </body>
 </html>
