--- a/index.html
+++ b/index.html
@@ -2,64 +2,60 @@
   <head>
   <meta charset="UTF-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="Chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.min.js"></script>
   <title>Нельзя просто так взять и выехать из Мытищ</title>
   </head>
   <body>
     <div>
       <canvas id="myChart" height="400px"></canvas>
     </div>
-
     <script>
+    var dataset = JSON.parse(`{% raw data %}`)
     var ctx = document.getElementById("myChart");
+    var labels = dataset.labels
+    var datasets = dataset.data.map(item => ({
+      label: item.name,
+      fill: false,
+      lineTension: 0.1,
+      backgroundColor: "rgba(75,192,192,0.4)",
+      borderColor: "rgba(75,192,192,1)",
+      borderCapStyle: 'butt',
+      borderDash: [],
+      borderDashOffset: 0.0,
+      borderJoinStyle: 'miter',
+      pointBorderColor: "rgba(75,192,192,1)",
+      pointBackgroundColor: "#fff",
+      pointBorderWidth: 1,
+      pointHoverRadius: 5,
+      pointHoverBackgroundColor: "rgba(75,192,192,1)",
+      pointHoverBorderColor: "rgba(220,220,220,1)",
+      pointHoverBorderWidth: 2,
+      pointRadius: 1,
+      pointHitRadius: 10,
+      data: item.values,
+    }))
 
-    $.getJSON('/api/', function (dataset) {
-      console.log(dataset)
-      var labels = dataset.labels
-      var datasets = dataset.data.map(item => ({
-        label: item.name,
-        fill: false,
-        lineTension: 0.1,
-        backgroundColor: "rgba(75,192,192,0.4)",
-        borderColor: "rgba(75,192,192,1)",
-        borderCapStyle: 'butt',
-        borderDash: [],
-        borderDashOffset: 0.0,
-        borderJoinStyle: 'miter',
-        pointBorderColor: "rgba(75,192,192,1)",
-        pointBackgroundColor: "#fff",
-        pointBorderWidth: 1,
-        pointHoverRadius: 5,
-        pointHoverBackgroundColor: "rgba(75,192,192,1)",
-        pointHoverBorderColor: "rgba(220,220,220,1)",
-        pointHoverBorderWidth: 2,
-        pointRadius: 1,
-        pointHitRadius: 10,
-        data: item.values,
-      }))
+    var data = {
+      labels,
+      datasets
+    };
 
-      var data = {
-        labels,
-        datasets
-      };
-
-      var options = {
-        maintainAspectRatio: false,
-        responsive: true,
-        scales: {
-          yAxes: [{
-            ticks: {
-              beginAtZero:true
-            }
-          }]
-        }
+    var options = {
+      maintainAspectRatio: false,
+      responsive: true,
+      scales: {
+        yAxes: [{
+          ticks: {
+            beginAtZero:true
+          }
+        }]
       }
+    }
 
-      var myChartHome = new Chart(ctx, {
-        type: 'line',
-        data,
-        options,
-      });
+    var myChartHome = new Chart(ctx, {
+      type: 'line',
+      data,
+      options,
     });
     </script>
   </body>
