--- a/src/index_parser.html
+++ b/src/index_parser.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <script src="http://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-  <script src="//yandex.st/jquery/2.1.0/jquery.min.js"></script>  
+  <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>  
   <script src="router1.js" type="text/javascript"></script>
   </head>
   <body>
